[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longchat"
version = "0.2.3"
description = "An open platform for training, serving, and evaluating large language model based chatbots."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "fastapi", "gradio", "markdown2[all]", "numpy",
    "prompt_toolkit>=3.0.0", "requests", "rich>=10.0.0", "sentencepiece",
    "shortuuid", "transformers>=4.28.0", "tokenizers>=0.12.1", "torch",
    "uvicorn", "wandb", "httpx", "shortuuid", "pydantic", "tiktoken", "openai",
    "fschat", "cpm_kernels"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
